--- a/src/cell-group/api.yaml
+++ b/src/cell-group/api.yaml
@@ -68,6 +68,12 @@
       default: 这是单元格
       advanced: true
       description: 标题下方的描述信息
+    - name: icon
+      title: 图标
+      type: iconv
+      default: ''
+      description: 图标
+      compType: iconInput
     - name: linkType
       title: 链接类型
       type: string
