--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-
+    - name: testechoscrets
+      run: echo '${{ secrets.CODECOV_TOKEN }}'
+    - run: echo ${{ secrets.CODECOV_TOKEN }}
     - name: Install pnpm
       uses: pnpm/action-setup@v2.0.1
       with:
