build(@vant/area-data): generate both cjs/esm output

--- a/packages/vant-area-data/tsconfig.json
+++ b/packages/vant-area-data/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "../../tsconfig",
   "compilerOptions": {
-    "target": "ES2019",
-    "outDir": "./lib",
+    "outDir": "./dist",
     "declaration": true
   },
   "include": ["src/**/*"]
