--- a/src/popup/api.yaml
+++ b/src/popup/api.yaml
@@ -31,7 +31,7 @@
       title: 点击遮罩层后关闭
       type: boolean
       default: false
-      description: 是否在点击遮罩层后关闭
+      description: 是否点击遮罩层后关闭
   slots:
     - name: default
       description: 内容自定义
