--- a/src/cell-group/api.yaml
+++ b/src/cell-group/api.yaml
@@ -70,10 +70,9 @@
       description: 标题下方的描述信息
     - name: icon
       title: 图标
-      type: iconv
+      type: icon
       default: ''
       description: 图标
-      compType: iconInput
     - name: linkType
       title: 链接类型
       type: string
