--- a/src/iconv/api.yaml
+++ b/src/iconv/api.yaml
@@ -7,10 +7,9 @@
   attrs:
     - name: name
       title: 图标
-      type: iconv
+      type: icon
       default: ''
       description: 图标
-      compType: iconInput
     - name: linkType
       title: 链接类型
       type: string
