test: using esbuild instead of babel-jest

--- a/packages/vant-cli/package.json
+++ b/packages/vant-cli/package.json
@@ -48,12 +48,12 @@
     "vue": "^3.2.20"
   },
   "dependencies": {
-    "@types/jest": "^27.0.3",
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "@docsearch/css": "3.0.0-alpha.41",
     "@docsearch/js": "3.0.0-alpha.41",
+    "@types/jest": "^27.0.3",
     "@vant/eslint-config": "^3.3.2",
     "@vant/markdown-vetur": "^2.2.0",
     "@vant/stylelint-config": "^1.4.2",
@@ -62,12 +62,12 @@
     "@vitejs/plugin-vue-jsx": "^1.2.0",
     "@vue/babel-plugin-jsx": "^1.1.1",
     "autoprefixer": "^10.4.0",
-    "babel-jest": "^27.3.1",
     "chalk": "^4.1.2",
     "clean-css": "^5.2.2",
     "commander": "^8.3.0",
     "consola": "^2.15.3",
     "conventional-changelog": "^3.1.24",
+    "esbuild": "^0.14.2",
     "eslint": "^8.1.0",
     "execa": "^5.1.1",
     "fast-glob": "^3.2.7",
