--- a/packages/vant-cli/package.json
+++ b/packages/vant-cli/package.json
@@ -21,8 +21,7 @@
     "cjs",
     "site",
     "template",
-    "bin.js",
-    "preset.cjs"
+    "bin.js"
   ],
   "keywords": [
     "vant"
@@ -49,7 +48,6 @@
   },
   "dependencies": {
     "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "@docsearch/css": "3.0.0-alpha.41",
     "@docsearch/js": "3.0.0-alpha.41",
