feat: add dist-theme

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "lcapname": "@lcap/mobile-ui",
   "lcapversion": "0.6.3",
   "description": "Mobile UI Components built on Vue",
-  "main": "lib/vant.min.js",
+  "main": "dist-theme/index.js",
   "module22": "es/index.js",
-  "style": "lib/index.css",
+  "style": "dist-theme/index.css",
   "typings": "types/index.d.ts",
   "files": [
+    "dist-theme",
     "es",
     "lib",
     "types",
