fix: 文案描述更正

--- a/src/for-components/api.yaml
+++ b/src/for-components/api.yaml
@@ -3,7 +3,7 @@
   icon: forcom
   labels:
     - Table
-  description: 为空时自适应宽度，自动换行
+  description: 组件列表
   attrs:
     - name: data-source
       title: 数据源
@@ -18,7 +18,7 @@
       title: 每行排列项数
       type: number
       default: 5
-      description: 每行排列项数
+      description: 为空时自适应宽度，自动换行
   slots:
     - name: default
       description: 内容自定义
