chore: switch npm tag to latest-v2

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "types",
     "vetur"
   ],
+  "npm": {
+    "tag": "latest-v2"
+  },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
