--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lint": "vant-cli lint",
     "test": "vant-cli test",
     "build": "vant-cli build",
-    "release": "vant-cli release",
+    "release": "vant-cli release --tag latest-v2",
     "test:watch": "vant-cli test --watch",
     "release:site": "sh docs/site/release.sh",
     "test:coverage": "open test/coverage/index.html"
@@ -66,7 +66,7 @@
     "vue": ">= 2.6.0"
   },
   "devDependencies": {
-    "@vant/cli": "^2.10.3",
+    "@vant/cli": "^2.11.5",
     "prettier": "2.1.0",
     "vue": "^2.6.12",
     "vue-template-compiler": "^2.6.12"
