--- a/.github/workflows/deploy-v4-site.yml
+++ b/.github/workflows/deploy-v4-site.yml
@@ -2,7 +2,7 @@ name: Deploy V3 Site
 
 on:
   push:
-    branches: [dev]
+    branches: [next]
     paths:
       - 'packages/vant/docs/**'
 
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2
         with:
-          ref: 'dev'
+          ref: 'next'
 
       - name: Install pnpm
         uses: pnpm/action-setup@v2.0.1
@@ -36,4 +36,5 @@ jobs:
         with:
           branch: gh-pages
           folder: packages/vant/site-dist
+          target-folder: v4
           clean: false
