fix: 注释表单项值

--- a/src/form/api.yaml
+++ b/src/form/api.yaml
@@ -60,6 +60,7 @@
       sync: true
       model: true
       default: ""
+      advanced: true
       description: 表单项值
     - name: name
       title: 提交表单的标识符
