--- a/packages/create-vant-cli-app/package.json
+++ b/packages/create-vant-cli-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "create-vant-cli-app",
   "version": "2.0.0",
-  "description": "Create Vant Cli App",
+  "description": "Create Vant CLI App",
   "main": "lib/index.js",
   "bin": {
     "create-vant-cli-app": "./lib/index.js"
