chore: should publish README to npm

--- a/packages/vant/package.json
+++ b/packages/vant/package.json
@@ -35,7 +35,7 @@
     "test": "vant-cli test",
     "build": "vant-cli build",
     "build:site": "vant-cli build-site",
-    "release": "vant-cli release",
+    "release": "cp ../../README.md ./ && vant-cli release && rm ./README.md",
     "release:site": "pnpm build:site && gh-pages -d site-dist --add",
     "test:watch": "vant-cli test --watch",
     "test:coverage": "open test/coverage/index.html"
