fix(@vant/area-data): only publish dist folder to npm

--- a/packages/vant-area-data/package.json
+++ b/packages/vant-area-data/package.json
@@ -5,6 +5,9 @@
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "clean": "rimraf ./dist",
     "dev": "node ./build.js -w",
