feat: 分割线恢复文本显示 和是否虚线显示

--- a/src/divider/api.yaml
+++ b/src/divider/api.yaml
@@ -29,6 +29,11 @@
           title: 右
       default: center
       description: 内容位置
+    - name: title
+      title: 文本
+      type: string
+      default: 文本
+      description: 文本
   slots:
     - name: default
       title: 默认
