--- a/src/form/api.yaml
+++ b/src/form/api.yaml
@@ -65,6 +65,7 @@
     - name: name
       title: 提交表单的标识符
       type: string
+      advanced: true
       description: 提交表单的标识符
     - name: type
       title: 输入框类型
