--- a/src/area/api.yaml
+++ b/src/area/api.yaml
@@ -12,10 +12,10 @@
       model: true
       default: ""
       description: 当前选中的省市区code
-    - name: label-field
+    - name: labelField
       title: 左侧标题
       type: string
-      default: 左侧标题
+      default: 地区选择
       description: 左侧标题
     - name: areaListprop
       title: 数据源(默认全部)
