--- a/src/dropdown-menu/api.yaml
+++ b/src/dropdown-menu/api.yaml
@@ -32,6 +32,11 @@
       type: boolean
       default: true
       description: 是否点击遮罩层后关闭菜单
+    - name: route
+      title: 是否开启路由模式
+      type: boolean
+      default: true
+      description: 是否开启路由模式
   slots:
     - name: default
       description: 插入`<van-dropdown-menu>`子组件。
