--- a/packages/vant/package.json
+++ b/packages/vant/package.json
@@ -62,14 +62,14 @@
   ],
   "dependencies": {
     "@vant/icons": "^1.8.0",
-    "@vant/popperjs": "^1.1.0",
-    "@vant/use": "^1.3.6"
+    "@vant/popperjs": "^1.2.0",
+    "@vant/use": "^1.4.0"
   },
   "peerDependencies": {
     "vue": "^3.0.0"
   },
   "devDependencies": {
-    "@vant/area-data": "^1.1.3",
+    "@vant/area-data": "workspace:*",
     "@vant/cli": "workspace:*",
     "@vant/eslint-config": "workspace:*",
     "@vue/runtime-core": "^3.2.27",
