fix: 同步cloudui 图片和uploader的逻辑

--- a/src/uploader/api.yaml
+++ b/src/uploader/api.yaml
@@ -28,7 +28,7 @@
       options:
         - title: JSON
           value: json
-        - title: Simple
+        - title: URL字符串
           value: simple
       default: json
       description: 转换器
