feat: 和谐单元格的值属性

--- a/src/cell-group/api.yaml
+++ b/src/cell-group/api.yaml
@@ -62,6 +62,7 @@
       type: string, number
       default2: 内容
       description: 值
+      advanced: true
     - name: rtitle
       title: 右侧文本
       type: string
