chore: compatible with pnpm v7

--- a/.github/workflows/deploy-v3-site.yml
+++ b/.github/workflows/deploy-v3-site.yml
@@ -16,9 +16,7 @@ jobs:
           ref: 'dev'
 
       - name: Install pnpm
-        uses: pnpm/action-setup@v2.0.1
-        with:
-          version: 6.20.3
+        run: npm i pnpm@7 -g
 
       - uses: actions/setup-node@v2
         with:
