--- a/packages/vant/package.json
+++ b/packages/vant/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vant",
-  "version": "3.4.9",
+  "version": "3.5.0-beta.0",
   "description": "Mobile UI Components built on Vue",
   "main": "lib/vant.cjs.js",
   "module": "es/index.mjs",
