--- a/src-vusion/components/grid-view/api.yaml
+++ b/src-vusion/components/grid-view/api.yaml
@@ -169,8 +169,12 @@
       group: 选择属性
   slots:
     - name: default
-      description: 插入文本或 HTML
+      description: 插入<van-cardu>
       empty-background: drag-entity-here
+      support:
+        - name: van-cardu
+          title: 卡片
+          snippet: '<template #item="scope"><van-cardu><template #head><van-text text="标题"></van-text></template><van-text  text="卡片内容"></van-text></van-cardu></template>'
     - name: item
       description: 自定义选项的结构和样式
   events:
