--- a/src-vusion/components/grid-view/api.yaml
+++ b/src-vusion/components/grid-view/api.yaml
@@ -48,6 +48,31 @@
       default: 20
       description: ""
       group: 数据属性
+    - name: pull-refresh
+      title: 下拉刷新
+      type: boolean
+      default: true
+      description: 是否开启下拉刷新
+    - name: pulling-text
+      title: 下拉过程中提示文字
+      type: string
+      default: 下拉刷新
+    - name: loosing-text
+      title: 释放过程中提示文字
+      type: string
+      default: 释放刷新
+    - name: success-text
+      title: 刷新成功提示文字
+      type: string
+      default: 已刷新
+    - name: success-duration
+      title: 刷新成功提示展示时长(ms)
+      type: number
+      default: 500
+    - name: pull-distance
+      title: 触发下拉刷新的距离
+      type: number
+      default: 50
     - name: filterable
       title: 可筛选
       type: boolean
