--- a/packages/create-vant-cli-app/package.json
+++ b/packages/create-vant-cli-app/package.json
@@ -34,7 +34,7 @@
     "@types/fs-extra": "^9.0.13",
     "@types/inquirer": "^8.1.3",
     "release-it": "^15.1.1",
-    "typescript": "~4.5.2"
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "chalk": "^4.1.2",
