--- a/packages/vant-popperjs/package.json
+++ b/packages/vant-popperjs/package.json
@@ -42,7 +42,7 @@
   "devDependencies": {
     "esbuild": "^0.14.29",
     "release-it": "^15.1.1",
-    "typescript": "~4.5.2"
+    "typescript": "^4.7.4"
   },
   "release-it": {
     "git": {
