--- a/packages/vant-use/package.json
+++ b/packages/vant-use/package.json
@@ -39,7 +39,7 @@
   "devDependencies": {
     "esbuild": "^0.14.29",
     "release-it": "^15.1.1",
-    "typescript": "~4.5.2",
+    "typescript": "^4.7.4",
     "vue": "^3.2.27"
   },
   "release-it": {
