--- a/packages/vant/package.json
+++ b/packages/vant/package.json
@@ -59,7 +59,7 @@
     "@vant/eslint-config": "workspace:*",
     "@vue/runtime-core": "^3.2.27",
     "@vue/test-utils": "^2.0.0-rc.16",
-    "typescript": "~4.5.2",
+    "typescript": "^4.7.4",
     "vue": "^3.2.27",
     "vue-router": "^4.0.12"
   },
