--- a/packages/vant-cli/package.json
+++ b/packages/vant-cli/package.json
@@ -61,7 +61,6 @@
     "@vitejs/plugin-vue-jsx": "^1.3.3",
     "@vue/babel-plugin-jsx": "^1.1.1",
     "autoprefixer": "^10.4.0",
-    "chalk": "^4.1.2",
     "commander": "^8.3.0",
     "consola": "^2.15.3",
     "conventional-changelog": "^3.1.24",
@@ -82,6 +81,7 @@
     "markdown-it": "^12.2.0",
     "markdown-it-anchor": "^8.4.1",
     "ora": "^6.0.1",
+    "picocolors": "^1.0.0",
     "postcss": "^8.3.11",
     "postcss-load-config": "^3.1.0",
     "prettier": "^2.5.0",
