--- a/packages/vant-cli/package.json
+++ b/packages/vant-cli/package.json
@@ -77,9 +77,9 @@
     "jest-canvas-mock": "^2.3.1",
     "jest-serializer-html": "^7.1.0",
     "less": "^4.1.2",
-    "lint-staged": "^12.1.2",
     "markdown-it": "^12.2.0",
     "markdown-it-anchor": "^8.4.1",
+    "nano-staged": "^0.8.0",
     "ora": "^6.0.1",
     "picocolors": "^1.0.0",
     "postcss": "^8.3.11",
