--- a/packages/vant-cli/package.json
+++ b/packages/vant-cli/package.json
@@ -80,7 +80,7 @@
     "markdown-it": "^12.2.0",
     "markdown-it-anchor": "^8.4.1",
     "nano-staged": "^0.8.0",
-    "ora": "^6.0.1",
+    "nanospinner": "^1.1.0",
     "picocolors": "^1.0.0",
     "postcss": "^8.3.11",
     "postcss-load-config": "^3.1.0",
