chore: remove prepare script

--- a/packages/vant-compat/package.json
+++ b/packages/vant-compat/package.json
@@ -25,8 +25,7 @@
     "build:types": "tsc -p ./tsconfig.json --emitDeclarationOnly",
     "build:bundle": "node ./build.js",
     "build": "pnpm clean && pnpm build:bundle && pnpm build:types",
-    "release": "pnpm build && release-it",
-    "prepare": "pnpm build"
+    "release": "pnpm build && release-it"
   },
   "repository": {
     "type": "git",
